--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mglob\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Define the directory where your CSV files are stored\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import glob\n",
@@ -38,13 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,47 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Unnamed: 0  Public Vehicle Number    Status Vehicle Make Vehicle Model  \\\n",
-      "0        1286                  12009  RESERVED    CHEVROLET       EXPRESS   \n",
-      "1        2095                  12248  INACTIVE     MERCEDES      SPRINTER   \n",
-      "2        7950                  13527  INACTIVE     VAN HOOL         TD925   \n",
-      "3        8700                  12248  INACTIVE     MERCEDES      SPRINTER   \n",
-      "4        9359                  13528  INACTIVE     VAN HOOL         TD925   \n",
-      "\n",
-      "   Vehicle Model Year Vehicle Color Vehicle Fuel Source Wheelchair Accessible  \\\n",
-      "0              2014.0         BLACK          Bio-Diesel                     N   \n",
-      "1              2010.0        SILVER          Bio-Diesel                     N   \n",
-      "2              2008.0           RED          Bio-Diesel                     N   \n",
-      "3              2010.0        SILVER          Bio-Diesel                     N   \n",
-      "4              2008.0           RED          Bio-Diesel                     N   \n",
-      "\n",
-      "                              Company Name                 Address     City  \\\n",
-      "0                CHICAGO PRIVATE TOURS LLC  4567 S. OAKENWALD AVE.  CHICAGO   \n",
-      "1  O'HARE-MIDWAY LIMOUSINE SERVICE INC # 2       4610 N. CLARK ST.  CHICAGO   \n",
-      "2                 TRT TRANSPORTATION, INC.     4400 S. RACINE AVE.  CHICAGO   \n",
-      "3  O'HARE-MIDWAY LIMOUSINE SERVICE INC # 2       4610 N. CLARK ST.  CHICAGO   \n",
-      "4                 TRT TRANSPORTATION, INC.     4400 S. RACINE AVE.  CHICAGO   \n",
-      "\n",
-      "  State  ZIP Code Taxi Affiliation Taxi Medallion License Management   \\\n",
-      "0    IL   60653.0              NaN                                NaN   \n",
-      "1    IL   60640.0              NaN                                NaN   \n",
-      "2    IL   60609.0              NaN                                NaN   \n",
-      "3    IL   60640.0              NaN                                NaN   \n",
-      "4    IL   60609.0              NaN                                NaN   \n",
-      "\n",
-      "                  Record ID  \n",
-      "0  12009Charter Sightseeing  \n",
-      "1  12248Charter Sightseeing  \n",
-      "2  13527Charter Sightseeing  \n",
-      "3  12248Charter Sightseeing  \n",
-      "4  13528Charter Sightseeing  \n"
+     "ename": "NameError",
+     "evalue": "name 'vehicles_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#First few records of the vehicles data frame\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mvehicles_df\u001b[49m\u001b[38;5;241m.\u001b[39mhead())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'vehicles_df' is not defined"
      ]
     }
    ],
@@ -167,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -246,11 +222,33 @@
     "\n",
     "print(fuel_category_counts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vehicles_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m duplicates \u001b[38;5;241m=\u001b[39m \u001b[43mvehicles_df\u001b[49m[vehicles_df\u001b[38;5;241m.\u001b[39mduplicated(subset\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPublic Vehicle Number\u001b[39m\u001b[38;5;124m'\u001b[39m, keep\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)]\n\u001b[0;32m      2\u001b[0m duplicates\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'vehicles_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "duplicates = vehicles_df[vehicles_df.duplicated(subset='Public Vehicle Number', keep=False)]\n",
+    "duplicates\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -264,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
