Fixed Removing error

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -6,14 +6,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mglob\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Define the directory where your CSV files are stored\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 9 CSV files.\n",
+      "Combined DataFrame saved to 'combined_vehicles_data.csv'.\n"
      ]
     }
    ],
@@ -91,18 +88,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'vehicles_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#First few records of the vehicles data frame\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mvehicles_df\u001b[49m\u001b[38;5;241m.\u001b[39mhead())\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'vehicles_df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Index  Public Vehicle Number    Status Vehicle Make Vehicle Model  \\\n",
+      "0   1286                  12009  RESERVED    CHEVROLET       EXPRESS   \n",
+      "1   2095                  12248  INACTIVE     MERCEDES      SPRINTER   \n",
+      "2   7950                  13527  INACTIVE     VAN HOOL         TD925   \n",
+      "3   8700                  12248  INACTIVE     MERCEDES      SPRINTER   \n",
+      "4   9359                  13528  INACTIVE     VAN HOOL         TD925   \n",
+      "\n",
+      "   Vehicle Model Year Vehicle Color Vehicle Fuel Source Wheelchair Accessible  \\\n",
+      "0              2014.0         BLACK          Bio-Diesel                     N   \n",
+      "1              2010.0        SILVER          Bio-Diesel                     N   \n",
+      "2              2008.0           RED          Bio-Diesel                     N   \n",
+      "3              2010.0        SILVER          Bio-Diesel                     N   \n",
+      "4              2008.0           RED          Bio-Diesel                     N   \n",
+      "\n",
+      "                              Company Name                 Address     City  \\\n",
+      "0                CHICAGO PRIVATE TOURS LLC  4567 S. OAKENWALD AVE.  CHICAGO   \n",
+      "1  O'HARE-MIDWAY LIMOUSINE SERVICE INC # 2       4610 N. CLARK ST.  CHICAGO   \n",
+      "2                 TRT TRANSPORTATION, INC.     4400 S. RACINE AVE.  CHICAGO   \n",
+      "3  O'HARE-MIDWAY LIMOUSINE SERVICE INC # 2       4610 N. CLARK ST.  CHICAGO   \n",
+      "4                 TRT TRANSPORTATION, INC.     4400 S. RACINE AVE.  CHICAGO   \n",
+      "\n",
+      "  State  ZIP Code Taxi Affiliation Taxi Medallion License Management   \\\n",
+      "0    IL   60653.0              NaN                                NaN   \n",
+      "1    IL   60640.0              NaN                                NaN   \n",
+      "2    IL   60609.0              NaN                                NaN   \n",
+      "3    IL   60640.0              NaN                                NaN   \n",
+      "4    IL   60609.0              NaN                                NaN   \n",
+      "\n",
+      "                  Record ID  \n",
+      "0  12009Charter Sightseeing  \n",
+      "1  12248Charter Sightseeing  \n",
+      "2  13527Charter Sightseeing  \n",
+      "3  12248Charter Sightseeing  \n",
+      "4  13528Charter Sightseeing  \n"
      ]
     }
    ],
@@ -113,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -229,26 +255,210 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'vehicles_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m duplicates \u001b[38;5;241m=\u001b[39m \u001b[43mvehicles_df\u001b[49m[vehicles_df\u001b[38;5;241m.\u001b[39mduplicated(subset\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPublic Vehicle Number\u001b[39m\u001b[38;5;124m'\u001b[39m, keep\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)]\n\u001b[0;32m      2\u001b[0m duplicates\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'vehicles_df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Index  Public Vehicle Number     Status Vehicle Make  Vehicle Model  \\\n",
+      "1       2095                  12248   INACTIVE     MERCEDES       SPRINTER   \n",
+      "3       8700                  12248   INACTIVE     MERCEDES       SPRINTER   \n",
+      "15      1619                    862  VIOLATION       TOYOTA        COROLLA   \n",
+      "29      4667                  13634   INACTIVE        DODGE  GRAND CARAVAN   \n",
+      "31      5259                   6870  VIOLATION         FORD         ESCAPE   \n",
+      "...      ...                    ...        ...          ...            ...   \n",
+      "16597  16143                     42     ACTIVE    PRECISION       6 SEATER   \n",
+      "16598  16151                     52     ACTIVE      SCHWINN           NONE   \n",
+      "16599  16216                     70  VIOLATION   MAINSTREET        CLASSIC   \n",
+      "16600  16229                     57  VIOLATION   MAINSTREET      BOARDWALK   \n",
+      "16601  16281                    117     ACTIVE      SCHWINN           NONE   \n",
+      "\n",
+      "       Vehicle Model Year Vehicle Color     Vehicle Fuel Source  \\\n",
+      "1                  2010.0        SILVER              Bio-Diesel   \n",
+      "3                  2010.0        SILVER              Bio-Diesel   \n",
+      "15                 2017.0         WHITE  Compressed Natural Gas   \n",
+      "29                 2011.0        SILVER  Compressed Natural Gas   \n",
+      "31                 2011.0         GREEN  Compressed Natural Gas   \n",
+      "...                   ...           ...                     ...   \n",
+      "16597              2020.0        FUSCIA                   Pedal   \n",
+      "16598              2014.0         GREEN                   Pedal   \n",
+      "16599                 0.0     RED/BLACK                   Pedal   \n",
+      "16600              2011.0           RED                   Pedal   \n",
+      "16601              2014.0         GREEN                   Pedal   \n",
+      "\n",
+      "      Wheelchair Accessible                             Company Name  \\\n",
+      "1                         N  O'HARE-MIDWAY LIMOUSINE SERVICE INC # 2   \n",
+      "3                         N  O'HARE-MIDWAY LIMOUSINE SERVICE INC # 2   \n",
+      "15                        N                          PETANI CAB CORP   \n",
+      "29                        N         SCR MEDICAL TRANSPORTATION, INC.   \n",
+      "31                        N                       ARIES TAXI CAB INC   \n",
+      "...                     ...                                      ...   \n",
+      "16597                     N               JBL PEDICAB MANAGEMENT LLC   \n",
+      "16598                     N                          BM PEDICAB INC.   \n",
+      "16599                     N                       EMPIRE PEDICAB LLC   \n",
+      "16600                     N                       CARGILL C KELLY II   \n",
+      "16601                     N                          BM PEDICAB INC.   \n",
+      "\n",
+      "                      Address     City State  ZIP Code  \\\n",
+      "1           4610 N. CLARK ST.  CHICAGO    IL   60640.0   \n",
+      "3           4610 N. CLARK ST.  CHICAGO    IL   60640.0   \n",
+      "15      2945 W. PETERSON AVE.  CHICAGO    IL   60659.0   \n",
+      "29     8801 S. GREENWOOD AVE.  CHICAGO    IL   60619.0   \n",
+      "31       6500 N. WESTERN AVE.  CHICAGO    IL   60645.0   \n",
+      "...                       ...      ...   ...       ...   \n",
+      "16597      1627 N. TRIPP AVE.  CHICAGO    IL   60639.0   \n",
+      "16598     4450 N. KEDZIE AVE.  CHICAGO    IL   60625.0   \n",
+      "16599        318 W. ADAMS ST.  CHICAGO    IL   60606.0   \n",
+      "16600        2428 W. 24TH PL.  CHICAGO    IL   60608.0   \n",
+      "16601     4450 N. KEDZIE AVE.  CHICAGO    IL   60625.0   \n",
+      "\n",
+      "                Taxi Affiliation      Taxi Medallion License Management   \\\n",
+      "1                            NaN                                     NaN   \n",
+      "3                            NaN                                     NaN   \n",
+      "15           Top Cab Association                           Top Cab Corp.   \n",
+      "29                           NaN                                     NaN   \n",
+      "31     TAXI TOWN AFFILIATION LLC  Medallion Leasing and Management, Inc.   \n",
+      "...                          ...                                     ...   \n",
+      "16597                        NaN                                     NaN   \n",
+      "16598                        NaN                                     NaN   \n",
+      "16599                        NaN                                     NaN   \n",
+      "16600                        NaN                                     NaN   \n",
+      "16601                        NaN                                     NaN   \n",
+      "\n",
+      "                      Record ID  \n",
+      "1      12248Charter Sightseeing  \n",
+      "3      12248Charter Sightseeing  \n",
+      "15                      862Taxi  \n",
+      "29                 13634Medicar  \n",
+      "31                     6870Taxi  \n",
+      "...                         ...  \n",
+      "16597                 42Pedicab  \n",
+      "16598                 52Pedicab  \n",
+      "16599                 70Pedicab  \n",
+      "16600                 57Pedicab  \n",
+      "16601                117Pedicab  \n",
+      "\n",
+      "[4008 rows x 17 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4008"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Detecting Duplicates\n",
+    "duplicates = vehicles_df[vehicles_df.duplicated(subset='Public Vehicle Number', keep=False)]\n",
+    "print(duplicates)\n",
+    "len(duplicates)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Index  Public Vehicle Number     Status Vehicle Make Vehicle Model  \\\n",
+      "0       1286                  12009   RESERVED    CHEVROLET       EXPRESS   \n",
+      "2       7950                  13527   INACTIVE     VAN HOOL         TD925   \n",
+      "4       9359                  13528   INACTIVE     VAN HOOL         TD925   \n",
+      "5       9441                  12025   INACTIVE     MERCEDES      SPRINTER   \n",
+      "6       9505                  13513   INACTIVE     VAN HOOL         TD925   \n",
+      "...      ...                    ...        ...          ...           ...   \n",
+      "16382  16576                    998  VIOLATION       TOYOTA         CAMRY   \n",
+      "16383  16583                   3810     ACTIVE       TOYOTA          RAV4   \n",
+      "16384  16590                   4690  VIOLATION       TOYOTA         CAMRY   \n",
+      "16385  16592                   2831     ACTIVE       TOYOTA         PRIUS   \n",
+      "16386  16596                   1509     ACTIVE       TOYOTA        SIENNA   \n",
+      "\n",
+      "       Vehicle Model Year Vehicle Color Vehicle Fuel Source  \\\n",
+      "0                  2014.0         BLACK          Bio-Diesel   \n",
+      "2                  2008.0           RED          Bio-Diesel   \n",
+      "4                  2008.0           RED          Bio-Diesel   \n",
+      "5                  2015.0         BLACK          Bio-Diesel   \n",
+      "6                  2008.0           RED          Bio-Diesel   \n",
+      "...                   ...           ...                 ...   \n",
+      "16382              2012.0         WHITE              Hybrid   \n",
+      "16383              2017.0    GRAY/WHITE              Hybrid   \n",
+      "16384              2014.0         WHITE              Hybrid   \n",
+      "16385              2012.0         WHITE              Hybrid   \n",
+      "16386              2023.0         WHITE              Hybrid   \n",
+      "\n",
+      "      Wheelchair Accessible                             Company Name  \\\n",
+      "0                         N                CHICAGO PRIVATE TOURS LLC   \n",
+      "2                         N                 TRT TRANSPORTATION, INC.   \n",
+      "4                         N                 TRT TRANSPORTATION, INC.   \n",
+      "5                         N  O'HARE-MIDWAY LIMOUSINE SERVICE INC # 2   \n",
+      "6                         N                 TRT TRANSPORTATION, INC.   \n",
+      "...                     ...                                      ...   \n",
+      "16382                     N                          AGOMONY CAB INC   \n",
+      "16383                     N               FENKIL ASMERA TAXI COMPANY   \n",
+      "16384                     N                        MURIELLE CADICHON   \n",
+      "16385                     N                            G S TRANS INC   \n",
+      "16386                     Y                           J A SHALOM LLC   \n",
+      "\n",
+      "                        Address     City State  ZIP Code  \\\n",
+      "0        4567 S. OAKENWALD AVE.  CHICAGO    IL   60653.0   \n",
+      "2           4400 S. RACINE AVE.  CHICAGO    IL   60609.0   \n",
+      "4           4400 S. RACINE AVE.  CHICAGO    IL   60609.0   \n",
+      "5             4610 N. CLARK ST.  CHICAGO    IL   60640.0   \n",
+      "6           4400 S. RACINE AVE.  CHICAGO    IL   60609.0   \n",
+      "...                         ...      ...   ...       ...   \n",
+      "16382     2601 W. PETERSON AVE.  CHICAGO    IL   60659.0   \n",
+      "16383  820 W. BELLE PLAINE AVE.  CHICAGO    IL   60613.0   \n",
+      "16384         1736 W. 105TH PL.  CHICAGO    IL   60643.0   \n",
+      "16385     2601 W. PETERSON AVE.  CHICAGO    IL   60659.0   \n",
+      "16386      2532 W. WARREN BLVD.  CHICAGO    IL   60612.0   \n",
+      "\n",
+      "                    Taxi Affiliation Taxi Medallion License Management   \\\n",
+      "0                                NaN                                NaN   \n",
+      "2                                NaN                                NaN   \n",
+      "4                                NaN                                NaN   \n",
+      "5                                NaN                                NaN   \n",
+      "6                                NaN                                NaN   \n",
+      "...                              ...                                ...   \n",
+      "16382                 DIS-AFFILIATED                      Owner Manager   \n",
+      "16383    Choice Taxi Association Inc                      Owner Manager   \n",
+      "16384                 DIS-AFFILIATED                     Owner-Operator   \n",
+      "16385  City Service Taxi Association                      Owner Manager   \n",
+      "16386                   Independent1                     Owner-Operator   \n",
+      "\n",
+      "                      Record ID  \n",
+      "0      12009Charter Sightseeing  \n",
+      "2      13527Charter Sightseeing  \n",
+      "4      13528Charter Sightseeing  \n",
+      "5      12025Charter Sightseeing  \n",
+      "6      13513Charter Sightseeing  \n",
+      "...                         ...  \n",
+      "16382                   998Taxi  \n",
+      "16383                  3810Taxi  \n",
+      "16384                  4690Taxi  \n",
+      "16385                  2831Taxi  \n",
+      "16386                  1509Taxi  \n",
+      "\n",
+      "[12594 rows x 17 columns]\n"
      ]
     }
    ],
    "source": [
-    "duplicates = vehicles_df[vehicles_df.duplicated(subset='Public Vehicle Number', keep=False)]\n",
-    "duplicates\n"
+    "#Removing Duplicates\n",
+    "vehicles_df = vehicles_df.drop_duplicates(subset=['Public Vehicle Number'], keep='first')\n",
+    "print(vehicles_df)\n",
+    "vehicles_df.to_csv('cleaned_vehicles.csv', index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -262,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
