sunburst chart added

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -70,6 +70,26 @@
     "            style={'textAlign': 'center', 'fontSize': '16px', 'color': 'white'}\n",
     "        )\n",
     "    ], style={'padding': '20px', 'backgroundColor': '#769199'}),\n",
+    "\n",
+    "        html.Div([\n",
+    "        html.Label(\"Filter by Fuel Type:\", style={'fontSize': '16px', 'fontWeight': 'bold', 'color': 'black', 'marginBottom': '10px'}),\n",
+    "        dcc.Dropdown(\n",
+    "            id='fuel-filter',\n",
+    "            options=[{'label': ft, 'value': ft} for ft in vehicles_df['Vehicle Fuel Source'].dropna().unique()],\n",
+    "            value=vehicles_df['Vehicle Fuel Source'].dropna().unique()[0],\n",
+    "            clearable=False\n",
+    "        )\n",
+    "    ], style={'padding': '20px'}),\n",
+    "\n",
+    "    # Sunburst Chart\n",
+    "    html.Div([\n",
+    "        dcc.Graph(id='sunburst-chart'),\n",
+    "        html.P(\n",
+    "            \"This chart represents the hierarchy of vehicles based on their make, model, and color. \"\n",
+    "            \"The size of each segment indicates the number of vehicles within that category.\",\n",
+    "            style={'textAlign': 'center', 'fontSize': '14px', 'marginTop': '10px'}\n",
+    "        )\n",
+    "    ]),\n",
     "   \n",
     "\n",
     "        html.Div([\n",
@@ -82,7 +102,45 @@
     "])\n",
     "\n",
     "# Callback for Sunburst, Line, and City Map\n",
-    "\n",
+    "@app.callback(\n",
+    "    [Output('sunburst-chart', 'figure'),\n",
+    "     Output('line-chart', 'figure'),\n",
+    "     Output('city-map', 'figure')],\n",
+    "    [Input('fuel-filter', 'value')]\n",
+    ")\n",
+    "def update_charts(fuel_type):\n",
+    "    # Filter DataFrame based on the selected fuel type\n",
+    "    filtered_data = vehicles_df[vehicles_df['Vehicle Fuel Source'] == fuel_type].copy()\n",
+    "    \n",
+    "    # Handle missing values explicitly with .loc\n",
+    "    filtered_data.loc[:, 'Vehicle Make'] = filtered_data['Vehicle Make'].fillna('Unknown')\n",
+    "    filtered_data.loc[:, 'Vehicle Model'] = filtered_data['Vehicle Model'].fillna('Unknown')\n",
+    "    filtered_data.loc[:, 'Vehicle Color'] = filtered_data['Vehicle Color'].fillna('Unknown')\n",
+    "    \n",
+    "    # Add a Count column for the hierarchy visualization\n",
+    "    filtered_data.loc[:, 'Count'] = 1\n",
+    "    \n",
+    "    # Sunburst Chart\n",
+    "    sunburst = px.sunburst(\n",
+    "        filtered_data,\n",
+    "        path=['Vehicle Make', 'Vehicle Model', 'Vehicle Color'],\n",
+    "        values='Count',\n",
+    "        title=\"Vehicle Hierarchy by Make, Model, and Color\",\n",
+    "        hover_data={\n",
+    "            'Vehicle Make': True,\n",
+    "            'Vehicle Model': True,\n",
+    "            'Vehicle Color': True,\n",
+    "            'Count': True\n",
+    "        }\n",
+    "    )\n",
+    "    sunburst.update_layout(\n",
+    "        margin=dict(t=50, l=25, r=25, b=25),\n",
+    "        hoverlabel=dict(\n",
+    "            bgcolor=\"black\",\n",
+    "            font_size=14,\n",
+    "            font_family=\"Arial\"\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "\n",
     "# Run the App\n",
