line chart added

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -98,7 +98,12 @@
     "            \"The data used here is a sample dataset and does not reflect actual vehicle registrations.\",\n",
     "            style={'textAlign': 'center', 'fontSize': '14px', 'color': 'white'}\n",
     "        )\n",
-    "    ], style={'padding': '20px', 'backgroundColor': '#769199'})\n",
+    "    ], style={'padding': '20px', 'backgroundColor': '#769199'}),\n",
+    "    # Line Chart\n",
+    "    html.Div([\n",
+    "        html.H3(\"Yearly Trends of Vehicle Registrations\"),\n",
+    "        dcc.Graph(id='line-chart'),\n",
+    "    ], style={'padding': '20px'}),\n",
     "])\n",
     "\n",
     "# Callback for Sunburst, Line, and City Map\n",
@@ -140,6 +145,20 @@
     "            font_size=14,\n",
     "            font_family=\"Arial\"\n",
     "        )\n",
+    "    )\n",
+    "\n",
+    "    # Line Chart\n",
+    "    yearly_data = filtered_data.groupby('Vehicle Model Year').size().reset_index(name='Count')\n",
+    "    line = px.line(\n",
+    "        yearly_data,\n",
+    "        x='Vehicle Model Year',\n",
+    "        y='Count',\n",
+    "        title=\"Yearly Trends of Vehicle Registrations\"\n",
+    "    )\n",
+    "    line.update_layout(\n",
+    "        xaxis_title=\"Year\",\n",
+    "        yaxis_title=\"Number of Registrations\",\n",
+    "        margin=dict(t=50, l=25, r=25, b=25)\n",
     "    )\n",
     "\n",
     "\n",
