City map chart added

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -96,6 +96,15 @@
     "        html.H3(\"Yearly Trends of Vehicle Registrations\"),\n",
     "        dcc.Graph(id='line-chart'),\n",
     "    ], style={'padding': '20px'}),\n",
+    "    # City Map\n",
+    "    html.Div([\n",
+    "        html.H3(\"City Distribution of Vehicle Registrations\"),\n",
+    "        dcc.Graph(id='city-map'),\n",
+    "        html.P(\n",
+    "            \"This map shows the distribution of vehicle registrations across cities. The size of the markers represents the number of registrations.\",\n",
+    "            style={'textAlign': 'center', 'fontSize': '14px', 'marginTop': '10px'}\n",
+    "        )\n",
+    "    ]),\n",
     "\n",
     "    # Footer\n",
     "    html.Div([\n",
@@ -160,6 +169,20 @@
     "        xaxis_title=\"Year\",\n",
     "        yaxis_title=\"Number of Registrations\",\n",
     "        margin=dict(t=50, l=25, r=25, b=25)\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "    # City Map\n",
+    "    city_map = px.scatter_mapbox(\n",
+    "        city_data,\n",
+    "        lat=\"latitude\",\n",
+    "        lon=\"longitude\",\n",
+    "        size=\"Count\",\n",
+    "        color=\"Count\",\n",
+    "        hover_name=\"City\",\n",
+    "        title=\"City Distribution of Vehicle Registrations\",\n",
+    "        mapbox_style=\"carto-positron\",\n",
+    "        zoom=10\n",
     "    )\n",
     "\n",
     "\n",
