fuel type pie chart added

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -106,6 +106,12 @@
     "        )\n",
     "    ]),\n",
     "\n",
+    "    #pie chart\n",
+    "    html.Div([\n",
+    "    html.H3(\"Proportion of Fuel Sources\"),\n",
+    "    dcc.Graph(id='pie-chart'),\n",
+    "]),\n",
+    "\n",
     "    # Footer\n",
     "    html.Div([\n",
     "        html.P(\n",
@@ -120,6 +126,7 @@
     "@app.callback(\n",
     "    [Output('sunburst-chart', 'figure'),\n",
     "     Output('line-chart', 'figure'),\n",
+    "     Output('pie-chart', 'figure'),\n",
     "     Output('city-map', 'figure')],\n",
     "    [Input('fuel-filter', 'value')]\n",
     ")\n",
@@ -184,6 +191,17 @@
     "        mapbox_style=\"carto-positron\",\n",
     "        zoom=10\n",
     "    )\n",
+    "    # Pie Chart: Proportion of Fuel Sources\n",
+    "fuel_data = filtered_data['Vehicle Fuel Source'].value_counts().reset_index()\n",
+    "fuel_data.columns = ['Fuel Source', 'Count']\n",
+    "pie_chart = px.pie(\n",
+    "    fuel_data,\n",
+    "    names='Fuel Source',\n",
+    "    values='Count',\n",
+    "    title=\"Proportion of Fuel Sources\",\n",
+    "    hole=0.4,  # Create a donut chart\n",
+    ")\n",
+    "pie_chart.update_traces(textinfo='percent+label')\n",
     "\n",
     "\n",
     "# Run the App\n",
